# brain-machine-candle

./: README.md
phi/: Cargo.toml  README.md
phi/src/: lib.rs  main.rs
phi_wasm/: Cargo.toml  README.md  build-lib.sh  phiWorker.js
phi_wasm/src/: main.rs
simple_mm/: Cargo.toml  README.md
simple_mm/src/: main.rs  simple_mm_metal.rs
whisper/: Cargo.toml  README.md
whisper/src/: main.rs
whisper_mic/: Cargo.toml  README.md
whisper_mic/src/: main.rs
yolo/: Cargo.toml  README.md
yolo/src/: lib.rs  main.rs
