[package]
name = "phi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.80", features = ["backtrace"] }
candle-core = { version = "0.4.0", features = ["metal"] }
candle-nn = { version = "0.4.0", features = ["metal"] }
candle-transformers = { version = "0.4.0", features = ["metal"] }
clap = { version = "4.5.1", features = ["derive"] }
csv = "1.3.0"
hf-hub = { version = "0.3.2", features = ["tokio"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokenizers = { version = "0.15.2", features = ["onig"] }
tracing-chrome = "0.7.1"
tracing-subscriber = "0.3.18"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = 3
