[package]
name = "phi_wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle-core = "0.4.0"
candle-nn = "0.4.0"
candle-transformers = "0.4.0"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.68"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokenizers = { version = "0.15.2", features = ["unstable_wasm"], default-features = false }
wasm-bindgen = "0.2.91"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
