[package]
name = "simple_mm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle-core = { version = "0.4.0", features = ["metal"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = 3

[[bin]]
name = "simple_mm_cpu"
path = "src/simple_mm_cpu.rs"

[[bin]]
name = "simple_mm_metal"
path = "src/simple_mm_metal.rs"
