[package]
name = "whisper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.80", features = ["backtrace"] }
byteorder = "1.5.0"
candle-core = { version = "0.4.0", features = ["metal"] }
candle-nn = { version = "0.4.0", features = ["metal"] }
candle-transformers = { version = "0.4.0", features = ["metal"] }
clap = { version = "4.5.1", features = ["derive"] }
hf-hub = { version = "0.3.2", features = ["tokio"] }
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
symphonia = { version = "0.5.4", features = ["all"] }
tokenizers = { version = "0.15.2", features = ["onig"] }
tracing-chrome = "0.7.1"
tracing-subscriber = "0.3.18"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = 3
